:cat2: fixed pm25 NASAGap bug

--- a/src/styles/less/main.less
+++ b/src/styles/less/main.less
@@ -108,3 +108,25 @@ h3 {
     box-shadow: 2px 2px 2px 0 rgba(51,51,51,.75);
   }
 }
+
+#timeProgress {
+  width: 200px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  
+  z-index: 1;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+
+  background-color: #777;
+  padding: 5px 10px;
+  border-radius: 5px;
+  #time {
+    text-align: center;
+    margin: 0;
+    color: #eee;
+  }
+}
